# world_burner

./: .env  .env.example  .gitignore  Cargo.toml  README.md  diesel.toml  rust-toolchain.toml  scratch.sql  todo.org
api/: Cargo.toml  Rocket.toml  integration_test.sh  scratch.sql
api/gold_revised/dwarf_settings/: clansman.ron  guilder.ron  noble.ron  outcast.ron
api/migrations/2019-11-16-232134_create_lifepaths/: down.sql
api/migrations/2019-11-17-014813_create_lifepath_skill_lists/: down.sql  up.sql
api/migrations/2019-11-17-020544_create_traits/: up.sql
api/migrations/2019-11-17-021749_create_lifepath_trait_lists/: down.sql
api/migrations/2019-11-22-040512_create_skill_roots/: down.sql
api/src/: lib.rs  main.rs  routes.rs  schema.rs  seeding.rs
api/src/models/: lifepaths.rs
api/src/repos/: lifepaths.rs
api/src/routes/: errors.rs  lifepaths.rs  mod.rs  spa.rs
api/src/seeding/: insertable.rs  mod.rs
api/src/services/: lifepaths.rs
api/tests/: data_integrity.rs  lib.rs  lifepath_routes.rs  smoke.rs
api/tests/common/: mod.rs
gold_revised/: dwarf_settings.ron  skills.ron  stocks.ron  traits.ron
gold_revised/dwarf_settings/: artificer.ron  clansman.ron  guilder.ron  host.ron  noble.ron  outcast.ron
migrations/2019-11-16-204110_create_books/: down.sql  up.sql
migrations/2019-11-16-204351_add_gold_revised_and_codex/: up.sql
src/: lib.rs  main.rs  schema.rs  seeding.rs
src/repos/: lifepaths.rs
tests/: data_integrity.rs  lib.rs  lifepath_routes.rs  setup.rs  smoke.rs
web/: draggable.js  elm.json  index.html  live_dev.sh
(+52 files in other folders)
