[package]
name = "world_burner"
version = "0.1.0"
authors = ["Dan Knutson <dan.knutson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.3", features = ["postgres"] }
dotenv = "0.15.0"
diesel_migrations = "1.4.0"
diesel-derive-enum = { version = "0.4.4", features = ["postgres"] }
serde = "1.0.102"
serde_derive = "1.0.102"
ron = "0.5.1"
